tests/paczka2/big_fuzzy/67238614.err
Error in line 3: 1GnpoP S461 15,1
Error in line 2: uUYn S461 41,7
Error in line 6: azgr8 A477 81,8
Error in line 13: azgr8 A286 41,8
Error in line 26: 7CcvkAC A286 24,9
Error in line 37: Q4jy A718 337,5
Error in line 38: Q4jy S461 81,4
Error in line 33: uUYn A718 99,9
Error in line 49: azgr8 A477 81,5
Error in line 53: azgr8 A718 42,9
Error in line 61: vGnpoP A7v8 3v,8
Error in line 56: Q4jy S461 65,2
Error in line 63: 1GnpoP A718 60,9
Error in line 70: 1GnpoP S461 122,26
Error in line 84: azgr8 A286 21,5
Error in line 79: ogt A286 80,5
Error in line 88: Q4jy A286 53,4
Error in line 72: S461 A286 23,5
Error in line 99: Q4jy A718 17,7
Error in line 105: azgr8 A286 36,5
Error in line 110: 1GnpoP S461 4,3
Error in line 121: S461 A286 15,0
Error in line 116: 1GnpoP A477 99,2
Error in line 141: azgr8 A286 -3,3
Error in line 149: 1GnpoP S461 26,4
Error in line 160: S461 A477 33,1
Error in line 168: Q4jy S461 -1,7
Error in line 161: S461 A718 5,1
Error in line 170: azgr8 A286 54,53
Error in line 169: S461 S461 60,9
Error in line 171: ogt A286 96,0
Error in line 176: ogt A477 86,0
Error in line 177: 7CcvkAC A718 64,7
Error in line 164: Q4jy S461 7,4
Error in line 186: uUYn S461 13,1
Error in line 199: 1GnpoP A718 8,2
Error in line 210: Q4jy A718 39,4
Error in line 214: Q4jy ò461 9,2
Error in line 207: uUYn A718 14,5
Error in line 212: Q4jy A286 40,8
Error in line 224: Q4jy S461 18,8
Error in line 232: Q4jy A286 22,79
